#1747 - one more fix to cropped logos

--- a/server/http-dashboard/app/components/Layout/components/UserLayout/styles.less
+++ b/server/http-dashboard/app/components/Layout/components/UserLayout/styles.less
@@ -19,8 +19,10 @@
   margin-top: -8px !important;
   padding-top: 48px;
 }
+
 .user-layout-left-navigation-profile--overlay {
   left: 50px !important;
+
   .ant-dropdown-menu {
     margin-top: 48px !important;
   }
@@ -32,6 +34,7 @@
     font-size: 16px;
     padding: 8px 16px;
   }
+
   .ant-dropdown-menu-item {
     padding: 8px 16px;
     font-weight: 400 !important;
@@ -43,9 +46,11 @@
       color: @color-dark-grey-75;
     }
   }
+
   .user-layout--organization-select--org-active {
     color: @color-primary !important;
   }
+
   .user-layout--organization-select--org-level-1 {
     font-weight: 500 !important;
   }
@@ -53,18 +58,23 @@
   .user-layout--organization-select--org-level-2 {
     padding-left: 24px !important;
   }
+
   .user-layout--organization-select--org-level-3 {
     padding-left: 32px !important;
   }
+
   .user-layout--organization-select--org-level-4 {
     padding-left: 40px !important;
   }
+
   .user-layout--organization-select--org-level-5 {
     padding-left: 48px !important;
   }
+
   .user-layout--organization-select--org-level-6 {
     padding-left: 56px !important;
   }
+
   .user-layout--organization-select--org-level-7 {
     padding-left: 64px !important;
   }
@@ -106,23 +116,29 @@
 
   &-fold {
     width: 64px;
+    height: 64px;
     &-company-logo {
       max-width: 100%;
       height: 64px;
       line-height: 64px;
+
       img {
         vertical-align: middle;
         max-width: 100%;
+        max-height: 100%;
       }
     }
   }
 
   &-unfold {
     width: 192px;
+    height: 64px;
+
     &-company-logo {
       max-width: 100%;
       height: 64px;
       line-height: 64px;
+
       img {
         vertical-align: middle;
         max-height: 100%;
@@ -138,13 +154,16 @@
     .ant-menu-item {
       padding: 0 22px !important;
       height: 64px;
+
       i {
         font-size: 20px !important;
         line-height: 64px !important;
       }
+
       &:after {
         right: 1px;
       }
+
       &:hover {
         background: @color-dark-grey-05;
       }
@@ -167,6 +186,7 @@
       cursor: pointer;
       font-size: 18px;
       line-height: 32px;
+
       &:hover {
         color: @color-primary;
       }
@@ -176,6 +196,7 @@
   &-profile {
     align-self: center;
     margin-bottom: 28px;
+
     &-button {
       align-self: center;
       cursor: pointer
@@ -189,6 +210,7 @@
     font-size: 16px;
     padding: 12px 16px 4px;
   }
+
   .ant-dropdown-menu-item-group-list {
 
   }
